force-app/main/default/objects/Case/fields/Online_Status__c.field-meta.xml
<CustomField>
    <fullName>Online_Status__c</fullName>
    <description>Can show online status of BE in the case view as well. So ideally can mass manage the case, e.g. mass close the case</description>
    <formula>TEXT(Account.Online_Status_Backend__c)</formula>
    <label>Online_Status</label>
    <type>Text</type>
</CustomField>