force-app/main/default/objects/Case/fields/Open_Children_Cases_Counter__c.field-meta.xml
<CustomField>
    <fullName>Open_Children_Cases_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts how many open child cases ( Currently only for DE CC Module )</description>
    <label>Open Children Cases Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>