force-app/main/default/objects/Case/fields/Opened_Hour__c.field-meta.xml
<CustomField>
    <fullName>Opened_Hour__c</fullName>
    <description>German Time</description>
    <formula>VALUE(MID(TEXT( CreatedDate + 2/24),12,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opened Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>