force-app/main/default/objects/Case/fields/Opp_Owner_s_number__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_s_number__c</fullName>
    <formula>Opportunity__r.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Owner&apos;s number</label>
    <type>Text</type>
</CustomField>