force-app/main/default/objects/Case/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>KR Refund process to know the order date</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>