force-app/main/default/objects/Case/fields/Override_Validation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Validation_Reason__c</fullName>
    <description>Reason for bypassing validations. Required when setting Bypass Validations checkbox as true.</description>
    <label>Override Validation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Override_Validations_Reasons</valueSetName>
    </valueSet>
</CustomField>