force-app/main/default/objects/Case/fields/Override_Validations__c.field-meta.xml
<CustomField>
    <fullName>Override_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to bypass validations for specific scenarios. It is required to specify the Bypass reasons when setting this as true.</description>
    <label>Override Validations</label>
    <type>Checkbox</type>
</CustomField>