force-app/main/default/objects/Case/fields/Partial_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Partial_Refund_Amount__c</fullName>
    <label>Partial Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>