force-app/main/default/objects/Case/fields/Partial_Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Partial_Refund_Type__c</fullName>
    <label>Partial Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank transfer</fullName>
            </value>
            <value>
                <fullName>Online payment</fullName>
            </value>
            <value>
                <fullName>COD</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>MOLpay</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Apple Pay</fullName>
            </value>
            <value>
                <fullName>PayLah</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>