force-app/main/default/objects/Case/fields/Payment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payment_Provider__c</fullName>
    <label>Payment Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkout</fullName>
            </value>
            <value>
                <fullName>NBK</fullName>
            </value>
            <value>
                <fullName>NBB</fullName>
            </value>
            <value>
                <fullName>Checkout Oy</fullName>
            </value>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Klarna</fullName>
            </value>
            <value>
                <fullName>ApplePay</fullName>
            </value>
            <value>
                <fullName>GooglePay</fullName>
            </value>
            <value>
                <fullName>SiftScience</fullName>
            </value>
            <value>
                <fullName>Ethoca</fullName>
            </value>
            <value>
                <fullName>Ravelin</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>GlobalPay</fullName>
            </value>
            <value>
                <fullName>Kbank</fullName>
            </value>
            <value>
                <fullName>MolPay</fullName>
            </value>
            <value>
                <fullName>Dohabank</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>