force-app/main/default/objects/Case/fields/Person_In_Charge__c.field-meta.xml
<CustomField>
    <fullName>Person_In_Charge__c</fullName>
    <label>Person In Charge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0.자동</fullName>
            </value>
            <value>
                <fullName>1.일반가맹(0%상품-주류O)</fullName>
            </value>
            <value>
                <fullName>1.일반가맹(0%상품-주류X)</fullName>
            </value>
            <value>
                <fullName>1.일반가맹(수수료변경)</fullName>
            </value>
            <value>
                <fullName>1.일반가맹(주류O)</fullName>
            </value>
            <value>
                <fullName>1.일반가맹(주류X)</fullName>
            </value>
            <value>
                <fullName>2.Franchise(본사메뉴-주류O)</fullName>
            </value>
            <value>
                <fullName>2.Franchise(본사메뉴-주류X)</fullName>
            </value>
            <value>
                <fullName>2.Franchise(샘플페이지메뉴)</fullName>
            </value>
            <value>
                <fullName>2.Franchise(수수료변경)</fullName>
            </value>
            <value>
                <fullName>2.Franchise(지점메뉴-주류O)</fullName>
            </value>
            <value>
                <fullName>2.Franchise(지점메뉴-주류X)</fullName>
            </value>
            <value>
                <fullName>2.Franchise(템플릿메뉴)</fullName>
            </value>
            <value>
                <fullName>3.CRM Change Only</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>A(A)-배요환</fullName>
            </value>
            <value>
                <fullName>A(A)-신지현</fullName>
            </value>
            <value>
                <fullName>A(A)-정우경</fullName>
            </value>
            <value>
                <fullName>A(A)-정현주</fullName>
            </value>
            <value>
                <fullName>A(B)-구하윤</fullName>
            </value>
            <value>
                <fullName>A(B)-박애경</fullName>
            </value>
            <value>
                <fullName>A(B)-오택룡</fullName>
            </value>
            <value>
                <fullName>A(B)-이명현</fullName>
            </value>
            <value>
                <fullName>A(B)-이수현</fullName>
            </value>
            <value>
                <fullName>A(B)-이승희</fullName>
            </value>
            <value>
                <fullName>A(B)-이지호</fullName>
            </value>
            <value>
                <fullName>A(B)-장유화</fullName>
            </value>
            <value>
                <fullName>A(C)-김용회</fullName>
            </value>
            <value>
                <fullName>A(C)-남윤창</fullName>
            </value>
            <value>
                <fullName>A(C)-서예은</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>