force-app/main/default/objects/Case/fields/Person_in_charge_BE__c.field-meta.xml
<CustomField>
    <fullName>Person_in_charge_BE__c</fullName>
    <inlineHelpText>Person in charge for Backend ID creation</inlineHelpText>
    <label>Person in-charge BE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GVS</fullName>
            </value>
            <value>
                <fullName>Amy</fullName>
            </value>
            <value>
                <fullName>Aaron</fullName>
            </value>
            <value>
                <fullName>Jacky</fullName>
            </value>
            <value>
                <fullName>Editorial Management Team</fullName>
            </value>
            <value>
                <fullName>Andrea Walsh</fullName>
            </value>
            <value>
                <fullName>Christopher Tan</fullName>
            </value>
            <value>
                <fullName>Debbie Yeung</fullName>
            </value>
            <value>
                <fullName>Derek Du</fullName>
            </value>
            <value>
                <fullName>Diana Lee</fullName>
            </value>
            <value>
                <fullName>Gloria Siu</fullName>
            </value>
            <value>
                <fullName>Henry Feng</fullName>
            </value>
            <value>
                <fullName>James Evans</fullName>
            </value>
            <value>
                <fullName>Joshua Jun</fullName>
            </value>
            <value>
                <fullName>Olivia Jeon</fullName>
            </value>
            <value>
                <fullName>Paulus Poon</fullName>
            </value>
            <value>
                <fullName>Shell Pandaeng</fullName>
            </value>
            <value>
                <fullName>Stephen Sanjaya</fullName>
            </value>
            <value>
                <fullName>Steven Morrison</fullName>
            </value>
            <value>
                <fullName>Tony Greig</fullName>
            </value>
            <value>
                <fullName>Wan Hoe Goh</fullName>
            </value>
            <value>
                <fullName>Arlene Salanguit</fullName>
            </value>
            <value>
                <fullName>Timothy Reyes</fullName>
            </value>
            <value>
                <fullName>Mark Ong</fullName>
            </value>
            <value>
                <fullName>Sophia Alba</fullName>
            </value>
            <value>
                <fullName>Tristan Guanco</fullName>
            </value>
            <value>
                <fullName>Nina Domingo</fullName>
            </value>
            <value>
                <fullName>Clare Nicholl</fullName>
            </value>
            <value>
                <fullName>Madison Murphy</fullName>
            </value>
            <value>
                <fullName>Arifin Tellegen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>