force-app/main/default/objects/Case/fields/Person_in_charge_Delivery_Area__c.field-meta.xml
<CustomField>
    <fullName>Person_in_charge_Delivery_Area__c</fullName>
    <label>Person in-charge Delivery Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alexander Liljeskär</fullName>
            </value>
            <value>
                <fullName>Elena Lövholm Eriksson</fullName>
            </value>
            <value>
                <fullName>Henrik Eriksson</fullName>
            </value>
            <value>
                <fullName>Jakob Wikenstå</fullName>
            </value>
            <value>
                <fullName>Jasmine Berhane Selassiel</fullName>
            </value>
            <value>
                <fullName>Johanna Wickström</fullName>
            </value>
            <value>
                <fullName>Lia Kousta Bergström</fullName>
            </value>
            <value>
                <fullName>Linnea Hjerpe Persson</fullName>
            </value>
            <value>
                <fullName>Linn Lindholm</fullName>
            </value>
            <value>
                <fullName>Malin Wallander</fullName>
            </value>
            <value>
                <fullName>Maria Bengtsson</fullName>
            </value>
            <value>
                <fullName>Nellie Eriksson</fullName>
            </value>
            <value>
                <fullName>Olivia Blom</fullName>
            </value>
            <value>
                <fullName>Richard Karlsson</fullName>
            </value>
            <value>
                <fullName>Stina Lönnqvist</fullName>
            </value>
            <value>
                <fullName>Stiven Persson</fullName>
            </value>
            <value>
                <fullName>Therese Nilsson</fullName>
            </value>
            <value>
                <fullName>Tove Stork</fullName>
            </value>
            <value>
                <fullName>Viktor Hildingsson</fullName>
            </value>
            <value>
                <fullName>Karolina Tornberg</fullName>
            </value>
            <value>
                <fullName>Kevin Lindberg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>