force-app/main/default/objects/Case/fields/Person_In_Charge_First_Check__c.field-meta.xml
<CustomField>
    <fullName>Person_In_Charge_First_Check__c</fullName>
    <description>SP-1113</description>
    <label>Person In Charge - First Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abdul Khaliq</fullName>
            </value>
            <value>
                <fullName>Akash Kumar</fullName>
            </value>
            <value>
                <fullName>Amit Kumar</fullName>
            </value>
            <value>
                <fullName>Amit Sharma</fullName>
            </value>
            <value>
                <fullName>Anju Rani</fullName>
            </value>
            <value>
                <fullName>Anju Sharma</fullName>
            </value>
            <value>
                <fullName>Ankur</fullName>
            </value>
            <value>
                <fullName>Devender</fullName>
            </value>
            <value>
                <fullName>Geeta Chugh</fullName>
            </value>
            <value>
                <fullName>Inder Singh</fullName>
            </value>
            <value>
                <fullName>Kuldeep Singh</fullName>
            </value>
            <value>
                <fullName>Madhusudan</fullName>
            </value>
            <value>
                <fullName>Mahender Rawat</fullName>
            </value>
            <value>
                <fullName>Manpreet Kaur</fullName>
            </value>
            <value>
                <fullName>Mansi Khurana</fullName>
            </value>
            <value>
                <fullName>Mohit Tyagi</fullName>
            </value>
            <value>
                <fullName>Mridul Mishra</fullName>
            </value>
            <value>
                <fullName>Nitya Gautam</fullName>
            </value>
            <value>
                <fullName>Paramjeet Singh</fullName>
            </value>
            <value>
                <fullName>Rahul Chauhan</fullName>
            </value>
            <value>
                <fullName>Rahul Kumar</fullName>
            </value>
            <value>
                <fullName>Rahul Tomer</fullName>
            </value>
            <value>
                <fullName>Shubam Pandey</fullName>
            </value>
            <value>
                <fullName>Tanu Gupta</fullName>
            </value>
            <value>
                <fullName>Tanvi</fullName>
            </value>
            <value>
                <fullName>Varsha Kaushik</fullName>
            </value>
            <value>
                <fullName>Vinay Kumar</fullName>
            </value>
            <value>
                <fullName>Vitesh Kumar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>