force-app/main/default/objects/Case/fields/Person_in_charge_Menu_Typing__c.field-meta.xml
<CustomField>
    <fullName>Person_in_charge_Menu_Typing__c</fullName>
    <inlineHelpText>Person in Charge for Menu Typing</inlineHelpText>
    <label>Person in-charge Menu Typing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aaron</fullName>
            </value>
            <value>
                <fullName>Abdul Khaliq</fullName>
            </value>
            <value>
                <fullName>Adriana Rotari</fullName>
            </value>
            <value>
                <fullName>Adriana Taques</fullName>
            </value>
            <value>
                <fullName>Adriana Taquez</fullName>
            </value>
            <value>
                <fullName>Adrian Cuello</fullName>
            </value>
            <value>
                <fullName>Agente 1</fullName>
            </value>
            <value>
                <fullName>Agente 2</fullName>
            </value>
            <value>
                <fullName>Agente 3</fullName>
            </value>
            <value>
                <fullName>Agente 4</fullName>
            </value>
            <value>
                <fullName>Agustina Pagliari</fullName>
            </value>
            <value>
                <fullName>Aileen Masagca Romero</fullName>
            </value>
            <value>
                <fullName>Akash Kumar</fullName>
            </value>
            <value>
                <fullName>Ala Dercaci</fullName>
            </value>
            <value>
                <fullName>Alberto Gonzalez</fullName>
            </value>
            <value>
                <fullName>Alejandra Callejas</fullName>
            </value>
            <value>
                <fullName>Alejandra Gonzalez</fullName>
            </value>
            <value>
                <fullName>Alexander Liljeskär</fullName>
            </value>
            <value>
                <fullName>Alexandra Briceño</fullName>
            </value>
            <value>
                <fullName>Alexandr Danilov</fullName>
            </value>
            <value>
                <fullName>Alina Durbala</fullName>
            </value>
            <value>
                <fullName>Alisa Strugac</fullName>
            </value>
            <value>
                <fullName>Allan Jose Bautista</fullName>
            </value>
            <value>
                <fullName>Amit Kumar</fullName>
            </value>
            <value>
                <fullName>Amit Sharma</fullName>
            </value>
            <value>
                <fullName>Ana Crupnic</fullName>
            </value>
            <value>
                <fullName>Ana Fitii</fullName>
            </value>
            <value>
                <fullName>Andrea Walsh</fullName>
            </value>
            <value>
                <fullName>Andres Cupitra</fullName>
            </value>
            <value>
                <fullName>Angela Ariza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>