force-app/main/default/objects/Case/fields/Person_In_Charge_Take_Online__c.field-meta.xml
<CustomField>
    <fullName>Person_In_Charge_Take_Online__c</fullName>
    <label>Person In Charge - Take Online</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0.자동</fullName>
            </value>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>A(A)-배요환</fullName>
            </value>
            <value>
                <fullName>A(A)-신지현</fullName>
            </value>
            <value>
                <fullName>A(A)-정우경</fullName>
            </value>
            <value>
                <fullName>A(A)-정현주</fullName>
            </value>
            <value>
                <fullName>A(B)-구하윤</fullName>
            </value>
            <value>
                <fullName>A(B)-박애경</fullName>
            </value>
            <value>
                <fullName>A(B)-오택룡</fullName>
            </value>
            <value>
                <fullName>A(B)-이명현</fullName>
            </value>
            <value>
                <fullName>A(B)-이수현</fullName>
            </value>
            <value>
                <fullName>A(B)-이승희</fullName>
            </value>
            <value>
                <fullName>A(B)-이지호</fullName>
            </value>
            <value>
                <fullName>A(B)-장유화</fullName>
            </value>
            <value>
                <fullName>A(C)-심수빈</fullName>
            </value>
            <value>
                <fullName>A(C)-조우미</fullName>
            </value>
            <value>
                <fullName>Aaron</fullName>
            </value>
            <value>
                <fullName>Abdulsamad</fullName>
            </value>
            <value>
                <fullName>Ahmed Kamel</fullName>
            </value>
            <value>
                <fullName>Aileen Masagca Romero</fullName>
            </value>
            <value>
                <fullName>Alexander Liljeskär</fullName>
            </value>
            <value>
                <fullName>Allan Jose Bautista</fullName>
            </value>
            <value>
                <fullName>Amy</fullName>
            </value>
            <value>
                <fullName>Andrea Walsh</fullName>
            </value>
            <value>
                <fullName>Arifin Tellegen</fullName>
            </value>
            <value>
                <fullName>Arlene Salanguit</fullName>
            </value>
            <value>
                <fullName>Ashita</fullName>
            </value>
            <value>
                <fullName>A-배은령</fullName>
            </value>
            <value>
                <fullName>A-이민</fullName>
            </value>
            <value>
                <fullName>A-최윤정</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>