force-app/main/default/objects/Case/fields/PP_Backend_Id__c.field-meta.xml
<CustomField>
    <fullName>PP_Backend_Id__c</fullName>
    <label>Backend Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>