force-app/main/default/objects/Case/fields/Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_ID__c</fullName>
    <label>Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>