force-app/main/default/objects/Case/fields/Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Date__c</fullName>
    <description>When the refund was issued</description>
    <label>Refund Date</label>
    <type>Date</type>
</CustomField>