force-app/main/default/objects/Case/fields/Refund_Notes__c.field-meta.xml
<CustomField>
    <fullName>Refund_Notes__c</fullName>
    <description>SCC-442</description>
    <label>Refund Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>