force-app/main/default/objects/Case/fields/Refund_Period__c.field-meta.xml
<CustomField>
    <fullName>Refund_Period__c</fullName>
    <label>Refund Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Period</fullName>
            </value>
            <value>
                <fullName>2nd Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>