force-app/main/default/objects/Case/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <description>Salesforce cases support</description>
    <label>Requestor</label>
    <type>Email</type>
</CustomField>