force-app/main/default/objects/Case/fields/ResolvedDate__c.field-meta.xml
<CustomField>
    <fullName>ResolvedDate__c</fullName>
    <description>SP-1856</description>
    <label>Resolved Date</label>
    <type>Date</type>
</CustomField>