force-app/main/default/objects/Case/fields/Restaurant_Name__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Name__c</fullName>
    <formula>Account.Restaurant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restaurant Name</label>
    <type>Text</type>
</CustomField>