force-app/main/default/objects/Case/fields/Restaurant_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Phone_Number__c</fullName>
    <formula>Account.Phone</formula>
    <label>Restaurant Phone Number</label>
    <type>Text</type>
</CustomField>