force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Root Cause for negative case closure</description>
    <inlineHelpText>Root Cause for negative case closure</inlineHelpText>
    <label>Root Cause</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activity Not Registered</fullName>
            </value>
            <value>
                <fullName>Against global standards</fullName>
            </value>
            <value>
                <fullName>Already Answered</fullName>
            </value>
            <value>
                <fullName>Already Refunded</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>BDT Request</fullName>
            </value>
            <value>
                <fullName>Billing Issues</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Bulk Update Done</fullName>
            </value>
            <value>
                <fullName>Business Closed</fullName>
            </value>
            <value>
                <fullName>Call Content Inadequate</fullName>
            </value>
            <value>
                <fullName>Call Frequency Inadequate</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Cannot Contact</fullName>
            </value>
            <value>
                <fullName>Can Not Reproduce Issue</fullName>
            </value>
            <value>
                <fullName>Cannot schedule appointment</fullName>
            </value>
            <value>
                <fullName>Capacity - Competitors</fullName>
            </value>
            <value>
                <fullName>Capacity - Driver issue</fullName>
            </value>
            <value>
                <fullName>Capacity - Drivers</fullName>
            </value>
            <value>
                <fullName>Capacity - Order Volume</fullName>
            </value>
            <value>
                <fullName>Capacity - Own Website</fullName>
            </value>
            <value>
                <fullName>Case Action Incomplete</fullName>
            </value>
            <value>
                <fullName>Cause Unresolved</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Change one&apos;s mind</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Commission Change - No Entry needed</fullName>
            </value>
            <value>
                <fullName>Commission too high</fullName>
            </value>
            <value>
                <fullName>Company License missing</fullName>
            </value>
            <value>
                <fullName>Company Number mis-match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>