force-app/main/default/objects/Case/fields/Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Id</label>
    <type>Text</type>
</CustomField>