force-app/main/default/objects/Case/fields/Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field. When checked by Batch will trigger workflow/outbound message to Qualtrics</description>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>