force-app/main/default/objects/Case/fields/Sent_Back_To_Level_1_Queue__c.field-meta.xml
<CustomField>
    <fullName>Sent_Back_To_Level_1_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For AU to track all Cases that were sent back to the Level 1 Queue. This is because agents should really be completing most, if not all Cases that they create themselves.</description>
    <label>Sent Back To Level 1 Queue</label>
    <type>Checkbox</type>
</CustomField>